<package>
  <name>arcs_rviz_plugins</name>
  <version>0.0.1</version>
  <description>
     Several plugins used by ARCS Lab.
  </description>
  <maintainer email="arcslab.ucr@gmail.com">ARCS-UCR</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>